part 2/2.01/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 3002
      protocol: TCP
      targetPort: 3002
