part 2/2.01/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-logoutput-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logoutput-service
                port:
                  number: 3001
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-service
                port:
                  number: 3002
